[build-system]
requires = [
    "hatchling>=0.21.0",
]
build-backend = "hatchling.build"

[project]
name = "rummage"
description = "A GUI search and replace app."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Isaac Muse", email = "Isaac.Muse@gmail.com" },
]
keywords = [
    "grep",
    "search",
    "find",
    "replace",
    "gui"
]
dynamic = [
    "classifiers",
    "dependencies",
    "version",
    "gui-scripts",
    "optional-dependencies"
]

[project.urls]
Homepage = "https://github.com/facelessuser/Rummage"

[tool.hatch.build]
artifacts = [
  "*.mo"
]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = [
  "babel",
]

[tool.hatch.version]
source = "code"
path = "rummage/lib/__meta__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/rummage/**/*.py",
    "/rummage/lib/gui/data/**/*.md",
    "/rummage/lib/gui/data/**/*.png",
    "/rummage/lib/gui/data/**/*.gif",
    "/rummage/lib/gui/data/**/*.js",
    "/rummage/lib/gui/data/**/*.css",
    "/rummage/lib/gui/data/**/*.html",
    "/rummage/lib/gui/data/**/*.svg",
    "/tests/**/*.py",
    "/tools/**/*.py",
    "/rummage/lib/gui/localization/locale/**/*.po",
    "/docs/src/markdown/**/*.md",
    "/docs/src/markdown/**/*.png",
    "/docs/src/markdown/**/*.svg",
    "/docs/src/markdown/**/*.gif",
    "/docs/src/markdown/**/*.icns",
    "/docs/src/markdown/**/*.ico",
    "/docs/src/markdown/**/*.js",
    "/docs/src/markdown/**/*.css",
    "/docs/src/markdown/**/*.html",
    "/docs/src/markdown/**/*.svg",
    "/docs/theme/**/*.js",
    "/docs/theme/**/*.html",
    "/docs/theme/**/*.css",
    "/requirements/*.txt",
    "/setup.cfg",
    "/tox.ini",
    "/gui.fbp",
    "/mkdocs.yml",
    "/mkdocs-internal.yml",
    "/.coveragerc",
    "/LICENSE.md"
]

[tool.hatch.build.targets.wheel]
include = [
    "/rummage"
]
