[extract_messages]
input_dirs = rummage
output_file = rummage/lib/gui/localization/locale/rummage.pot

[init_catalog]
domain = rummage
input-file = rummage/lib/gui/localization/locale/rummage.pot
output-dir = rummage/lib/gui/localization/locale

[update_catalog]
domain = rummage
input-file = rummage/lib/gui/localization/locale/rummage.pot
output-dir = rummage/lib/gui/localization/locale

[compile_catalog]
domain = rummage
directory = rummage/lib/gui/localization/locale

[metadata]
license_file = LICENSE.md
